--- a/src/layouts/Home.astro
+++ b/src/layouts/Home.astro
@@ -1,17 +1,7 @@
 ---
-// import Card from '../components/Card.astro';
 import BaseLayout from './BaseLayout.astro';
-// const { frontmatter } = Astro.props;
 ---
-
-<!-- <BaseLayout title="Welcome to Astro.">
-		<h1>Welcome to <span class="text-gradient">NL4Opt</span></h1>
-		<div class="instructions">
-			<slot />
-		</div>
-
-</BaseLayout> -->
-<BaseLayout title="Welcome to Astro.">
+<BaseLayout title="Welcome to NL4Opt.">
 	<nav class="navbar">
 		<a href="/">Home</a>
 		<a href="/results">Results</a>
@@ -89,116 +79,4 @@ import BaseLayout from './BaseLayout.astro';
 		margin-right: 1rem;
 		font-size: 1.2rem;
 	}
-</style>
-
-
-<template>
-  <nav class="navbar-menu">
-    <a href="/" class="navbar-item">Home</a>
-    <a href="/results" class="navbar-item">Results</a>
-    <a href="/rules" class="navbar-item">Rules</a>
-    <a href="/faq" class="navbar-item">FAQ</a>
-    <a href="/participate" class="navbar-item">Participate</a>
-    <a href="/blog" class="navbar-item">Blog</a>
-    <a href="/gettingstarted" class="navbar-item">Getting Started</a>
-    <a href="/tutorial" class="navbar-item">Tutorial</a>
-    <a href="/howtosubmit" class="navbar-item">How to Submit</a>
-  </nav>
-</template>
-
-<style>
-  .navbar-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    border: 1px solid #040035;
-    border-radius: 50px;
-    padding: 0.5rem 1rem;
-    margin: 2rem 0;
-    position: relative;
-  }
-
-  .navbar-menu::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -1px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 12px;
-    height: 12px;
-    background-color: #040035;
-    border-radius: 50%;
-    z-index: 1;
-  }
-
-  .navbar-item {
-    color: #040035;
-    text-decoration: none;
-    font-size: 1.2rem;
-    margin: 0 0.5rem;
-    font-weight: 500;
-    transition: color 0.2s ease-in-out;
-  }
-
-  .navbar-item:hover {
-    color: white;
-  }
-</style>
-
-
-<template>
-  <nav class="navbar-menu">
-    <a href="/" class="navbar-item">Home</a>
-    <a href="/results" class="navbar-item">Results</a>
-    <a href="/rules" class="navbar-item">Rules</a>
-    <a href="/faq" class="navbar-item">FAQ</a>
-    <a href="/participate" class="navbar-item">Participate</a>
-    <a href="/blog" class="navbar-item">Blog</a>
-    <a href="/gettingstarted" class="navbar-item">Getting Started</a>
-    <a href="/tutorial" class="navbar-item">Tutorial</a>
-    <a href="/howtosubmit" class="navbar-item">How to Submit</a>
-  </nav>
-</template>
-
-<style>
-  .navbar-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
-    border: 1px solid #040035;
-    border-radius: 50px;
-    padding: 0.5rem 1rem;
-    margin: 2rem 0;
-    position: relative;
-  }
-
-  .navbar-menu::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -1px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 12px;
-    height: 12px;
-    background-color: #040035;
-    border-radius: 50%;
-    z-index: 1;
-  }
-
-  .navbar-item {
-    color: #040035;
-    text-decoration: none;
-    font-size: 1.2rem;
-    margin: 0 0.5rem;
-    font-weight: 500;
-    transition: color 0.2s ease-in-out;
-  }
-
-  .navbar-item:hover {
-    color: white;
-  }
 </style>
